Networkpolicy/Calico/NetworkPolicy-ingress-all-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: backend
  name: worker-ingress-calico
spec:
  podSelector:
    matchLabels:
      app: worker
  policyTypes:
    - Ingress
